crates/plotnik-lib/tests/05-typegen/quantifiers/error_plus_repeat_on_node_needs_row_capture.txt
Q = (program (expression_statement (identifier) @id)+)
------------------ DIAGNOSTICS -------------------
error: captures `@id` repeat with `+` but aren't collected into a list
 --> query.ptk:1:14
  |
1 | Q = (program (expression_statement (identifier) @id)+)
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: add a row capture so each repeat becomes one element: `(...)+ @items`
help: or discard the captures if only the structure matters: `(...)+ @_`
